--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="https://www.allrecipes.com/recipe/25324/potato-dumplings/">Potato Dumplings</a>
+        <ul>
+            <li><a href="./recipes/potato-dumplings.html">Potato Dumplings</a></li>
+            <li><a href="./recipes/chickpea-curry.html">Chickpea Curry</a></li>
+            <li><a href="./recipes/burrito-casserole.html">Vegetarian Burrito Casserole</a></li>
+        </ul>
 </body>
 
 </html>
