--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel= "stylesheet" href="styles.css">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="body-text">
             <li><a href="./recipes/potato-dumplings.html">Potato Dumplings</a></li>
             <li><a href="./recipes/chickpea-curry.html">Chickpea Curry</a></li>
             <li><a href="./recipes/burrito-casserole.html">Vegetarian Burrito Casserole</a></li>
